src/test/ui/traits/traits-inductive-overflow-simultaneous.stderr
error[E0275]: overflow evaluating the requirement `{integer}: Tweedledum`
  --> $DIR/traits-inductive-overflow-simultaneous.rs:18:5
   |
LL | fn is_ee<T: Combo>(t: T) {
   |             ----- required by this bound in `is_ee`
...
LL |     is_ee(4);
   |     ^^^^^
   |
   = note: required because of the requirements on the impl of `Combo` for `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
